# python_cmake_build_system

./: .dockerignore  .gitignore  .travis  .travis copy  .travis.yml  Dockerfile  README.md  appveyor.yml  build.py  travisTests.py
buildSystemTests/: .gitignore  (+4 more)
buildSystemTests/multi_targets_project/code/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/ExeTarget1/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/ExeTarget1/other_res_exe1/: other_res_exe1_a.txt
buildSystemTests/multi_targets_project/code/ExeTarget1/res_exe1_a/: res_exe1_a.txt  res_exe1_b.txt
buildSystemTests/multi_targets_project/code/ExeTarget1/src/: ExeTarget1.cpp
buildSystemTests/multi_targets_project/code/ExeTarget2/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/ExeTarget2/other_res_exe2/: other_res_exe2_a.txt
buildSystemTests/multi_targets_project/code/ExeTarget2/res_exe2_a/: res_exe2_a.txt  res_exe2_b.txt
buildSystemTests/multi_targets_project/code/ExeTarget2/src/: ExeTarget2.cpp
buildSystemTests/multi_targets_project/code/InterfaceTarget1/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget1/other_res_interface1/: other_res_interface1_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget1/res_interface1_a/: res_interface1_a.txt  res_interface1_b.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget2/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget2/other_res_interface2/: other_res_interface2_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget2/res_interface2_a/: res_interface2_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget2/res_interface2_b/: res_interface2_b.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget3/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget3/other_res_interface3/: other_res_interface3_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget3/res_interface3_a/: res_interface3_b.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget3/res_interface3_b/: res_interface3_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget4/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget4/other_res_interface4/: other_res_interface4_a.txt
buildSystemTests/multi_targets_project/code/InterfaceTarget4/res_interface4_b/: res_interface4_a.txt  res_interface4_b.txt
buildSystemTests/multi_targets_project/code/SharedTarget1/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/SharedTarget1/other_res_shared1/: other_res_shared1_a.txt
buildSystemTests/multi_targets_project/code/SharedTarget1/res_shared1_a/: res_shared1_a.txt  res_shared1_b.txt
buildSystemTests/multi_targets_project/code/SharedTarget1/src/: SharedTarget1.cpp
buildSystemTests/multi_targets_project/code/SharedTarget2/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/SharedTarget2/other_res_shared2/: other_res_shared2_a.txt
buildSystemTests/multi_targets_project/code/SharedTarget2/res_shared2_a/: res_shared2_a.txt
buildSystemTests/multi_targets_project/code/SharedTarget2/res_shared2_b/: res_shared2_b.txt
buildSystemTests/multi_targets_project/code/SharedTarget2/src/: SharedTarget2.cpp
buildSystemTests/multi_targets_project/code/StaticTarget1/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/StaticTarget1/other_res_static1/: other_res_static1_a.txt
buildSystemTests/multi_targets_project/code/StaticTarget2/: CMakeLists.txt
buildSystemTests/multi_targets_project/code/StaticTarget3/: CMakeLists.txt
buildSystemTests/tests_benchmarks/code/: CMakeLists.txt
buildSystemTests/tests_benchmarks/code/benchmarks/: CMakeLists.txt
buildSystemTests/tests_benchmarks/code/inc/: Factorial.hpp
buildSystemTests/tests_benchmarks/code/src/: Factorial.cpp
buildSystemTests/tests_benchmarks/code/tests/: CMakeLists.txt
code/: CMakeLists.txt  README.md
code/factorial/: CMakeLists.txt
code/factorial/factorialExe/: CMakeLists.txt
code/factorial/factorialExe/inc/: MainClass.hpp
code/factorial/factorialExe/src/: MainClass.cpp  main.cpp
code/factorial/factorialExe/tests/: CMakeLists.txt
code/factorial/factorialExeShared/: CMakeLists.txt
code/factorial/factorialExeStatic/: CMakeLists.txt
code/factorial/factorialExeStatic/src/: main.cpp
code/factorial/factorialInterface/: CMakeLists.txt
code/factorial/factorialInterface/interface/: FactorialInterface.hpp
code/factorial/factorialIterative/: CMakeLists.txt
code/factorial/factorialIterative/benchmark/: conanfile.txt
code/factorial/factorialIterative/inc/: FactorialIterative.hpp
code/factorial/factorialIterative/interface/: FactorialFactoryIterative.hpp
code/factorial/factorialIterative/src/: FactorialFactoryIterative.cpp  FactorialIterative.cpp
code/factorial/factorialIterative/tests/: CMakeLists.txt
code/factorial/factorialRecursive/: CMakeLists.txt
code/factorial/factorialRecursive/inc/: FactorialRecursive.hpp
code/factorial/factorialRecursive/interface/: FactorialFactoryRecursive.hpp
code/factorial/factorialRecursive/src/: FactorialFactoryRecursive.cpp  FactorialRecursive.cpp
code/factorial/factorialRecursive/tests/: CMakeLists.txt
code/factorial/factorialShared/: CMakeLists.txt
code/factorial/factorialShared/interface/: MainClass.hpp
code/factorial/factorialShared/src/: MainClass.cpp
code/factorial/factorialShared/tests/: CMakeLists.txt
code/factorial/factorialStatic/: CMakeLists.txt
code/factorial/factorialStatic/tests/: CMakeLists.txt  conanfile.txt
code/lib/: CMakeLists.txt  conanfile.txt  res1.txt  res2.txt
code/lib/inc/: Lib.hpp
code/lib/resDir/: resDir.txt
code/lib/resDir2/: resDir2.txt
code/lib/src/: Lib.cpp
code/src/: TestApp.cpp
code/tests/: CMakeLists.txt
code/tests/src/: Tests.cpp
old/code/: CMakeLists.txt
old/code/factorial/: CMakeLists.txt
old/code/factorial/factorialIterative/: CMakeLists.txt
old/code/factorial/factorialRecursive/: CMakeLists.txt
old/code/factorial/factorialStatic/: CMakeLists.txt
(+107 files in other folders)
