# Author: Marcin Serwach
# License: MIT
# ULR: https://github.com/iblis-ms/python_cmake_build_system

add_subdirectory(factorialInterface)
add_subdirectory(factorialIterative)
add_subdirectory(factorialRecursive)
add_subdirectory(factorialShared)
add_subdirectory(factorialStatic)
add_subdirectory(factorialExeStatic)
add_subdirectory(factorialExeShared)